--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/testimonial-1.jpg" alt="Image">
+                            <img src="img/portfolio-4.jpg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
@@ -366,7 +366,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/testimonial-2.jpg" alt="Image">
+                            <img src="img/portfolio-4.jpg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
